--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <script src='javascripts/d3/d3.v3.js' type='text/javascript'></script>
     <script src='javascripts/vis.js' type='text/javascript'></script>
     <link href='stylesheets/index.css' rel='stylesheet' type='text/css'>
+    <link href='stylesheets/unsemantic-grid-responsive.css' rel='stylesheet' type='text/css'>
   </head>
   <body>
+    <div class='box'></div>
     <script type='text/javascript'>
-      var svg = d3.select("body").append("svg");
+      var svg = d3.select(".box").append("svg");
       init( svg );
     </script>
   </body>
