--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset='utf-8'>
     <script src='javascripts/d3/d3.v3.js' type='text/javascript'></script>
     <script src='javascripts/vis.js' type='text/javascript'></script>
+    <script src='javascripts/graph.js' type='text/javascript'></script>
+    <script src='javascripts/park.js' type='text/javascript'></script>
+    <script src='javascripts/format.js' type='text/javascript'></script>
+    <script src='javascripts/dataset.js' type='text/javascript'></script>
+    <script src='javascripts/plot.js' type='text/javascript'></script>
     <link href='stylesheets/index.css' rel='stylesheet' type='text/css'>
     <link href='stylesheets/unsemantic-grid-responsive.css' rel='stylesheet' type='text/css'>
   </head>
@@ -12,7 +17,10 @@
     <div class='box'></div>
     <script type='text/javascript'>
       var svg = d3.select(".box").append("svg");
-      init( svg );
+      var w = 600;
+      var h = 400;
+      var g = new Graph( w, h, svg );
+      var Format = new Format();
     </script>
   </body>
 </html>
